# cpp-pills

./: .gitignore  CMakeLists.txt  README.md  short.md
0_functions/: CMakeLists.txt
0_headers/: CMakeLists.txt
0_hello/: CMakeLists.txt
0_loops/: CMakeLists.txt  loops.cpp
0_variables/: CMakeLists.txt  variables.cpp
10_ternaryOperator/: CMakeLists.txt  main
11_instantiateObjects/: CMakeLists.txt  main.cpp
12_newKeyword/: CMakeLists.txt  newKeyword.cpp
13_implicitConversion/: CMakeLists.txt  implicitConversion.cpp  main  main.cpp
14_operatorOverloading/: CMakeLists.txt  main.cpp
15_thisOperator/: CMakeLists.txt  main.cpp
16_smartPointers/: CMakeLists.txt  smartPointers.cpp
17_copyConstructor/: CMakeLists.txt
18_arrowOperator/: CMakeLists.txt  arrowOperator.cpp
19_dynamicArray/: CMakeLists.txt  main
1_arrayFromFunction/: CMakeLists.txt  arrayFromFunction.cpp
1_arrayToFunction/: CMakeLists.txt  arrayToFunction.cpp
1_arrays/: CMakeLists.txt  arrays
1_pointers/: CMakeLists.txt  pointers.cpp
20_templates/: CMakeLists.txt  main  templates.cpp
21_functionPointers/: CMakeLists.txt  functionPointers.cpp  main  main.cpp
22_lambdas/: CMakeLists.txt  main  main.cpp
23_multidimensionalArrays/: CMakeLists.txt  multidimensionalArrays.cpp
24_sorting/: CMakeLists.txt  sorting.cpp
25_typePunning/: CMakeLists.txt  typePunning.cpp
26_union/: CMakeLists.txt  union.cpp
27_vistualDestructors/: CMakeLists.txt  virtualDestructors.cpp
28_casting/: CMakeLists.txt  casting.cpp
29_threads/: CMakeLists.txt  threads.cpp
2_references/: CMakeLists.txt  entity  entity.cpp  entity.h  references  references.cpp
30_singleton/: CMakeLists.txt  main  main.cpp  singleton.cpp
3_classes/: CMakeLists.txt  classes.cpp  main
4_structs/: CMakeLists.txt  structs.cpp
4_structs/include/: structs.h
5_static/: CMakeLists.txt  main  main.cpp  static
5_staticInClasses/: CMakeLists.txt  main  staticInClasses.cpp
6_enum/: CMakeLists.txt  enum.cpp  main
7_interfaces/: CMakeLists.txt  main
7_virtualFunctions/: CMakeLists.txt  main  virtualFunctions.cpp
8_strings/: CMakeLists.txt  main  strings.cpp
9_const/: CMakeLists.txt  const.cpp  main  main.cpp
HelloWorld/: main.cpp
_test/: CMakeLists.txt  main  main.cpp
codeLite/: Makefile  dev.workspace  notes.txt
codeLite/.codelite/: dev.session  dev.tags  refactoring.db
codeLite/.ctagsd/: ctags.replacements  ctagsd.json
codeLite/InstantiateObjects/: InstantiateObjects.project  main.cpp
codeLite/arrays/: arrays.project  main.cpp
codeLite/arrowOperator/: arrowOperator.project
codeLite/classes/: Something.cpp  Something.h  classes.mk  classes.project  classes.txt  compile_flags.txt  main.cpp
codeLite/const/: const.project  main.cpp
codeLite/copyConstructor/: copyConstructor.project  main.cpp
codeLite/dynamicArrays/: dynamicArrays.project  main.cpp
codeLite/enum/: compile_flags.txt  enum.mk  enum.project  main.cpp
codeLite/functions/: compile_flags.txt  functions.mk  functions.project  main.cpp  main.out
codeLite/headerFiles/: compile_flags.txt  headerFiles.mk  headerFiles.project  log.cpp  log.h  main.cpp
codeLite/helloWorld/: compile_flags.txt  helloWorld.mk  helloWorld.project  main  main.cpp  main.out
codeLite/inplicitConversion/: inplicitConversion.project  (+1 more)
(+130 files in other folders)
